--- a/playground/components/templates/TestLayout/test-layout.module.scss
+++ b/playground/components/templates/TestLayout/test-layout.module.scss
@@ -21,6 +21,7 @@
 }
 
 .header {
+    z-index: 1;
     position: sticky;
     top: 0;
     height: unit(10);
